# cursortab.nvim

./: .gitignore  LICENSE  README.md  buffer.go  diff_history_analysis.txt  go.mod  go.sum  jsinterp.js  main.go  mini.go  state.go
cursor/: buf.gen.yaml
cursor-rpc/: Makefile  README.md  client.go  go.mod  go.sum
cursor-rpc/cmd/example/: main.go
cursor-rpc/cmd/extract/: main.go  postprocess.js  preprocess.js
cursor-rpc/cursor/: buf.gen.yaml
cursortab/: cursortab.go  language.go
lua/cursortab/: init.lua
mitm/: README.md  decode_mitm.py  mitm_cursor_proto.py  pyproject.toml
plugin/: cursortab.lua
rpcplugin/: diff.go  rpcplugin.go  text.go
vbuf/: vbuf.go  vbuf_test.go
